--- a/index.html
+++ b/index.html
@@ -2,25 +2,10 @@
 
 <head>
 
-<style>
-
-.fuckYou{
-
-	font-weight: 900;
-	color:rgb(0,100,255);
-	font-size: 100;
-
-}
-
-
-</style>
+	<title> Any Fool Can Buy a Dot Org</title>
 
 </head>
 
-<body>
 
-<p class = "fuckYou">Fuck you</p>
-
-</body>
 
 </html>
