--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
 
 	<title> Any Fool Can Buy a Dot Org</title>
+	<script src="scripts.js"></script>
 
 </head>
+<body>
 
+	<img src="spidermanaccuse.jpeg" alt="spiderman accusing meme" id="spideraccuse" onclick="clickSpider()">
 
+</body>
 
 </html>
