--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-	<img src="spidermanaccuse.jpeg" alt="spiderman accusing meme" id="spideraccuse" onclick="clickSpider()">
+	<img src="spidermanaccuse.jpeg" alt="spiderman accusing meme" id="spideraccuse" onclick="clickSpider()" onmouseout="spiderHover()">
 
 </body>
 
