--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-	<nav>
+  <nav>
 		<a href="index.html">Home</a>
 			<span style="white-space:pre;"> | </span>
 				<a href="moreinfo.html">More Info</a>
@@ -16,7 +16,7 @@
 						<a href="about.html">About us</a>
 	</nav>
 
-	<h1> Home </h1>
+  <h1> About </h1>
 
 </body>
 
