--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 						<a href="about.html">About us</a>
 	</nav>
 
-	<h1> Home </h1>
+	<h1> Ho<span onclick="robits()">m</span>e </h1>
 
 </body>
 
