--- a/about.html
+++ b/about.html
@@ -1,23 +1,55 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
 
+	<script src="scripts/scripts.js"></script>
+	<link rel="stylesheet" href="stylesheets/style.css">
+
 	<title> Any Fool Can Buy a Dot Org</title>
-	<script src="scripts.js"></script>
+
+	<meta name="keywords" content="are .orgs reliable, reliable sources. reliable source, reliable, source, reliable source info, info about reliable sources,">
 
 </head>
 <body>
 
-  <nav>
-		<a href="index.html">Home</a>
-			<span style="white-space:pre;"> | </span>
-				<a href="moreinfo.html">More Info</a>
-					<span style="white-space:pre;"> | </span>
-						<a href="about.html">About us</a>
-	</nav>
+	<header>
 
-  <h1> About </h1>
+		<div id="navFloatLeft">
+			<p id="logo">LOGO</p>
+		</div>
+
+		<div id="navFloatRight">
+			<nav id="navigation">
+
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="moreinfo.html">More Info</a></li>
+					<li><a href="about.html">About</a></li>
+				</ul>
+
+			</nav>
+		</div>
+
+	</header>
+	<main>
+
+		<h2>About</h2>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+			veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+			ea commodo consequat. Duis aute irure dolor in reprehenderit in
+			voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+			sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+			mollit anim id est laborum.
+		</p>
+
+	</main>
+	<footer>
+
+
+
+	</footer>
 
 </body>
-
 </html>
