--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 	<header>
 
 		<div id="navFloatLeft">
-			<p id="logo">LOGO</p>
+			<p id="logo"><a href="">LOGO</a></p>
 		</div>
-
 		<div id="navFloatRight">
 			<nav id="navigation">
 
@@ -34,7 +33,8 @@
 	<main>
 
 		<h2> Main </h2>
-		<p>
+		<hr>
+		<p id="animTest">
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
 			veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
