--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 
 	<title> Any Fool Can Buy a Dot Org</title>
 
-	<meta name="keywords" content="are .orgs reliable, reliable sources. reliable source, reliable, source, reliable source info, info about reliable sources,">
+	<meta name="keywords" content="are .orgs reliable, reliable sources.
+	reliable source, reliable, source, reliable source info, info about reliable sources">
 
 </head>
 <body>
 
 	<header>
-
-		<div id="navFloatLeft">
+		<div class="navFloatLeft">
 			<p id="logo"><a href="">LOGO</a></p>
 		</div>
-		<div id="navFloatRight">
+		<div class="navFloatRight">
 			<nav id="navigation">
 
 				<ul>
@@ -32,7 +32,7 @@
 	</header>
 	<main>
 
-		<h2> Main </h2>
+		<h2> Home </h2>
 		<hr>
 		<p id="animTest">
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -46,8 +46,6 @@
 
 	</main>
 	<footer>
-
-
 
 	</footer>
 
