Fixed header issues

--- a/about.html
+++ b/about.html
@@ -13,12 +13,10 @@
 <body>
 
 	<header>
-
-		<div id="navFloatLeft">
-			<p id="logo">LOGO</p>
+		<div class="navFloatLeft">
+			<p id="logo"><a href="">LOGO</a></p>
 		</div>
-
-		<div id="navFloatRight">
+		<div class="navFloatRight">
 			<nav id="navigation">
 
 				<ul>
@@ -48,7 +46,7 @@
 	</main>
 	<footer>
 
-		
+
 
 	</footer>
 
