style changes& content
Added stylesheet for short pages and long pages for footers

added content to about page

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
 
 	<script src="scripts/scripts.js"></script>
 	<link rel="stylesheet" href="stylesheets/style.css">
+	<link rel="stylesheet" href="stylesheets/longFooterStyle.css">
 
 	<title> Any Fool Can Buy a Dot Org</title>
 
@@ -33,21 +34,51 @@
 
 		<h2>About</h2>
 		<hr>
+		<h3>Why does this site exist?</h3>
 		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-			veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-			ea commodo consequat. Duis aute irure dolor in reprehenderit in
-			voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-			sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-			mollit anim id est laborum.
+			This website was created to prove one of my former teachers wrong. (I'm a bit petty)
+		</p>
+
+		<h3>So whats the problem?</h3>
+		<p>
+			Growing up in the internet age my teachers always gave us guidelines on what websites could and could not be trusted.
+			Some of these guidelines were alright such as .edu and .gov are generally more trustworthy.
+			One of these guidelines that always bothered me is that .org websites are also more trustworthy.
+		</p>
+
+		<p>
+			I can't stress enough how wrong that is. I, a random 17 year old, bought this .org for $12.
+			When I first told my teacher that there was nothing stopping any random Joe from buying a .org
+			she responded with, "You must be illegally buying it then!"
+			...Ms. [REDACTED] I don't think Google would illegally sell anyone anything. (Well atleast not this blatantly)
+		</p>
+
+		<p>
+			What she didn't understand was that top level domains (.com, .net, .org, etc.) are just guidelines, they are not laws.
+			The only top level domains that are regulated are .edu and .gov. There may be more than those 2 but .org is not one of them.
+			If all guidelines were enforced then only commericial entites could used .com and only service providers could used .net.
+		</p>
+
+		<h3>Whats the solution then?</h3>
+		<p>
+			Alright I hear you saying, "Then how do I know if a website is reliable?" Its pretty simple actually, use common sense.
+		</p>
+		<p>
+			We all love Wikipedia right? Well never cite it. On every Wikipedia page at the bottom there will be sources, go to those instead.
+			Wikipedia is a great place to start but all information there is second hand, so go to the source. Going to the source directly will
+			help on cutting out bias from the page writer.
+		<p>
+			"But Wikipedia has editors to find wrong or bias information!"<br>
+			Yes, they do, but they aren't perfect. Wikipedia is a huge website, the editors will miss things.
+		</p>
+		<p>
+			Cutting out the middleman will generally make your information more correct.
+			Have you ever played "telephone?" Then you know exactly whats its like to try to accurateley convey an idea through multiple middlemen.
 		</p>
 
 	</main>
 	<footer>
-
-
-
+		<p>Michael Gain &copy 2019</p>
 	</footer>
 
 </body>
