--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 	<script src="scripts/scripts.js"></script>
 	<link rel="stylesheet" href="stylesheets/style.css">
+	<link rel="stylesheet" href="stylesheets/shortFooterStyle.css">
 
 	<title> Any Fool Can Buy a Dot Org</title>
 
@@ -46,7 +47,7 @@
 
 	</main>
 	<footer>
-
+		<p>Michael Gain &copy 2019</p>
 	</footer>
 
 </body>
