styles and easter eggs

--- a/about.html
+++ b/about.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
 
-	<script src="scripts/scripts.js"></script>
 	<link rel="stylesheet" href="stylesheets/style.css">
 	<link rel="stylesheet" href="stylesheets/longFooterStyle.css">
 
@@ -34,12 +33,12 @@
 
 		<h2>About</h2>
 		<hr>
-		<h3>Why does this site exist?</h3>
+		<h3><span>Why does this site exist?<span></h3>
 		<p>
 			This website was created to prove one of my former teachers wrong. (I'm a bit petty)
 		</p>
 
-		<h3>So whats the problem?</h3>
+		<h3><span>So whats the problem?<span></h3>
 		<p>
 			Growing up in the internet age my teachers always gave us guidelines on what websites could and could not be trusted.
 			Some of these guidelines were alright such as .edu and .gov are generally more trustworthy.
@@ -59,7 +58,7 @@
 			If all guidelines were enforced then only commericial entites could used .com and only service providers could used .net.
 		</p>
 
-		<h3>Whats the solution then?</h3>
+		<h3><span>Whats the solution then?<span></h3>
 		<p>
 			Alright I hear you saying, "Then how do I know if a website is reliable?" Its pretty simple actually, use common sense.
 		</p>
@@ -73,13 +72,14 @@
 		</p>
 		<p>
 			Cutting out the middleman will generally make your information more correct.
-			Have you ever played "telephone?" Then you know exactly whats its like to try to accurateley convey an idea through multiple middlemen.
+			Have you ever played "telephone?" Then you know exactly whats its like to try to accurately convey an idea through multiple middlemen.
 		</p>
 
 	</main>
 	<footer>
-		<p>Michael Gain &copy 2019</p>
+			<p>Michael Gain <span onclick="robits()">&copy</span> 2019</p>
 	</footer>
 
+	<script src="scripts/scripts.js"></script>
 </body>
 </html>
