--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
 
 	</main>
 	<footer>
-		<p>Michael Gain &copy 2019</p>
+		<p>Michael Gain <span onclick="robits()">&copy</span> 2019</p>
 	</footer>
 
+	<script src="scripts/scripts.js"></script>
+	
 </body>
 </html>
