--- a/moreinfo.html
+++ b/moreinfo.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
 
-	<script src="scripts/scripts.js"></script>
 	<link rel="stylesheet" href="stylesheets/style.css">
 	<link rel="stylesheet" href="stylesheets/shortFooterStyle.css">
 
@@ -46,8 +45,10 @@
 
 	</main>
 	<footer>
-		<p>Michael Gain &copy 2019</p>
+		<p>Michael Gain <span onclick="robits()">&copy</span> 2019</p>
 	</footer>
+
+	<script src="scripts/scripts.js"></script>
 
 </body>
 </html>
