--- a/about.html
+++ b/about.html
@@ -2,84 +2,85 @@
 <html lang="en">
 <head>
 
-	<link rel="stylesheet" href="stylesheets/style.css">
-	<link rel="stylesheet" href="stylesheets/longFooterStyle.css">
+  <meta charset="UTF-8">
+  <meta name="keywords" content="Michael Gain,Michael J Gain,Michael J. Gain,portfolio,about">
+  <meta name="author" content="Michael Gain">
+  <meta name="description" content="">
 
-	<title> Any Fool Can Buy a Dot Org</title>
-
-	<meta name="keywords" content="are .orgs reliable, reliable sources. reliable source, reliable, source, reliable source info, info about reliable sources,">
+  <link rel="stylesheet" href="stylesheets/stylesheet.css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway|ZCOOL+QingKe+HuangYou" rel="stylesheet">
+  <script src="scripts/scripts.js"></script>
+  <title>Michael Gain</title>
 
 </head>
 <body>
+  <header>
 
-	<header>
-		<div class="navFloatLeft">
-			<p id="logo"><a href="">LOGO</a></p>
-		</div>
-		<div class="navFloatRight">
-			<nav id="navigation">
+    <div class="floatLeft">
+      <p id="headerLogo"><a href="index.html">{ Michael Gain }</a></p>
+    </div>
 
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="moreinfo.html">More Info</a></li>
-					<li><a href="about.html">About</a></li>
-				</ul>
+    <div class="floatRight">
+        <nav id="mainNav">
+          <ul>
+            <li><span><a href="index.html">Home</a></span></li>
+            <li><span><a href="projects.html">My Projects</a></span></li>
+            <li><span><a href="about.html">About Me</a></span></li>
+          </ul>
+        </nav>
+    </div>
 
-			</nav>
-		</div>
+  </header>
+  <main>
 
-	</header>
-	<main>
+    <div class="experiencesContainer">
+      <h1>Experiences</h1>
+      <p>Most of my recent completed projects are listed on my
+        <a href="projects.html" class="linkClass">projects page</a>.</p>
 
-		<h2>About</h2>
-		<hr>
-		<h3><span>Why does this site exist?<span></h3>
-		<p>
-			This website was created to prove one of my former teachers wrong. (I'm a bit petty)
-		</p>
+      <p>Other notable projects have been hosting a website using
+      <a href="http://www.wampserver.com/en/" class="linkClass">WAMP server</a>,
+    hosting game servers, and processes associated with both such as
+    port forwarding.</p>
 
-		<h3><span>So whats the problem?<span></h3>
-		<p>
-			Growing up in the internet age my teachers always gave us guidelines on what websites could and could not be trusted.
-			Some of these guidelines were alright such as .edu and .gov are generally more trustworthy.
-			One of these guidelines that always bothered me is that .org websites are also more trustworthy.
-		</p>
+    <h1>Education</h1>
+    <p>I am currently enrolled in Cabarrus Early College of
+      Technology and Rowan-Cabarrus Community College. I am working towards
+    an Applied Associates of Computer Programming.</p>
 
-		<p>
-			I can't stress enough how wrong that is. I, a random 17 year old, bought this .org for $12.
-			When I first told my teacher that there was nothing stopping any random Joe from buying a .org
-			she responded with, "You must be illegally buying it then!"
-			...Ms. [REDACTED] I don't think Google would illegally sell anyone anything. (Well atleast not this blatantly)
-		</p>
+    <h2>Related to Education</h2>
+    <p>I recently recieved 3 Microsoft Technology Associate(MTA) certificates:</p>
+    <ul id="certList">
+      <li>MTA for Software Development Fundamentals (C#)</li>
+      <li>MTA for Introduction to Programming Using Javascript</li>
+      <li>MTA for Introduction to Programming using Python</li>
+    </ul>
 
-		<p>
-			What she didn't understand was that top level domains (.com, .net, .org, etc.) are just guidelines, they are not laws.
-			The only top level domains that are regulated are .edu and .gov. There may be more than those 2 but .org is not one of them.
-			If all guidelines were enforced then only commericial entites could used .com and only service providers could used .net.
-		</p>
+    </div>
 
-		<h3><span>Whats the solution then?<span></h3>
-		<p>
-			Alright I hear you saying, "Then how do I know if a website is reliable?" Its pretty simple actually, use common sense.
-		</p>
-		<p>
-			We all love Wikipedia right? Well never cite it. On every Wikipedia page at the bottom there will be sources, go to those instead.
-			Wikipedia is a great place to start but all information there is second hand, so go to the source. Going to the source directly will
-			help on cutting out bias from the page writer.
-		<p>
-			"But Wikipedia has editors to find wrong or bias information!"<br>
-			Yes, they do, but they aren't perfect. Wikipedia is a huge website, the editors will miss things.
-		</p>
-		<p>
-			Cutting out the middleman will generally make your information more correct.
-			Have you ever played "telephone?" Then you know exactly whats its like to try to accurately convey an idea through multiple middlemen.
-		</p>
+    <div class="contactContainer">
+      <h1>Contact Me</h1>
+        <table>
+          <tr>
+            <td><a href="mailto:gain.michaelj01@gmail.com"
+              target="_blank"><img src="media/gmail-logo.png" alt="gmail logo"></a></td>
+          </tr>
+          <tr>
+            <td><a href="https://www.linkedin.com/in/michael-gain-36212b184/"
+              class="linkClass" target="_blank">
+              <img src="media/LinkedIn-logo.png" alt="linkedin logo"></a></td>
+          </tr>
+        </table>
 
-	</main>
-	<footer>
-			<p>Michael Gain <span onclick="robits()">&copy</span> 2019</p>
-	</footer>
+    </div>
 
-	<script src="scripts/scripts.js"></script>
+  </main>
+  <br style="clear:both;">
+  <footer id="shortFooter">
+    <p id="footerLeft">Michael G. &copy; 2019</p>
+    <div id="footerRight">
+      <a href="index.html">Home</a> <p>|</p> <a href="projects.html">My Projects</a> <p>|</p> <a href="about.html">About Me</a>
+    </div>
+  </footer>
 </body>
 </html>
