--- a/index.html
+++ b/index.html
@@ -2,55 +2,67 @@
 <html lang="en">
 <head>
 
-	<script src="scripts/scripts.js"></script>
-	<link rel="stylesheet" href="stylesheets/style.css">
-	<link rel="stylesheet" href="stylesheets/shortFooterStyle.css">
+  <meta charset="UTF-8">
+  <meta name="keywords" content="Michael Gain,Michael J Gain,Michael J. Gain,portfolio,index,home">
+  <meta name="author" content="Michael Gain">
+  <meta name="description" content="">
 
-	<title> Any Fool Can Buy a Dot Org</title>
-
-	<meta name="keywords" content="are .orgs reliable, reliable sources.
-	reliable source, reliable, source, reliable source info, info about reliable sources">
+  <link rel="stylesheet" href="stylesheets/stylesheet.css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway|ZCOOL+QingKe+HuangYou" rel="stylesheet">
+  <script src="scripts/scripts.js"></script>
+  <title>Michael Gain</title>
 
 </head>
 <body>
+  <header>
 
-	<header>
-		<div class="navFloatLeft">
-			<p id="logo"><a href="">LOGO</a></p>
-		</div>
-		<div class="navFloatRight">
-			<nav id="navigation">
+    <div class="floatLeft">
+      <p id="headerLogo"><a href="index.html">{ Michael Gain }</a></p>
+    </div>
 
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="moreinfo.html">More Info</a></li>
-					<li><a href="about.html">About</a></li>
-				</ul>
+    <div class="floatRight">
+      <nav id="mainNav">
+        <ul>
+          <li><span><a href="index.html" id="test">Home</a></span></li>
+          <li><span><a href="projects.html">My Projects</a></span></li>
+          <li><span><a href="about.html">About Me</a></span></li>
+        </ul>
+      </nav>
+    </div>
 
-			</nav>
-		</div>
+  </header>
+  <main>
 
-	</header>
-	<main>
+    <div id="mainContent">
+      <h2>Hi, I'm Michael</h2>
+      <p class="paraText">My name is Michael and I am 17 years old. I am in the 11th grade
+      at an Early College Highschool. I am currently working towards and Applied
+      Associates in Computer Programming and plan to go to a 4 year college to
+      get atleast a Bachelors in Computer Science, but I eventually want to
+      get a PhD.</p>
 
-		<h2> Home </h2>
-		<hr>
-		<p id="animTest">
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-			veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-			ea commodo consequat. Duis aute irure dolor in reprehenderit in
-			voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-			sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-			mollit anim id est laborum.
-		</p>
+      <h2>Interests</h2>
+      <img src="media/code.jpg" class="imgContainer" alt="code">
+      <p class="paraText">I love programming and everything computers. I have done
+        a lot of programming in languages such as C++, C#, Python, JavaScript,
+        and Visual Basic. I also do HTML and CSS.</p>
 
-	</main>
-	<footer>
-		<p>Michael Gain <span onclick="robits()">&copy</span> 2019</p>
-	</footer>
+      <br style="clear:both;">
 
-	<script src="scripts/scripts.js"></script>
-	
+      <img src="media/gaming.jpg" class="imgContainer2" alt="keyboard">
+      <p class="paraText">If I'm not programming I'm probably playing video games.
+        My favorite game is Skyrim. It has been the biggest inspiration for my
+        career choice, video game developer. I want to open my own video game studio
+        and produce the type of games I love; Story rich, open-world, character
+        creation/customization, Role Playing Games.</p>
+    </div>
+
+  </main>
+<footer id="shortFooter">
+  <p id="footerLeft">Michael G. &copy; 2019</p>
+  <div id="footerRight">
+    <a href="index.html">Home</a> <p>|</p> <a href="projects.html">My Projects</a> <p>|</p> <a href="about.html">About Me</a>
+  </div>
+</footer>
 </body>
 </html>
