--- a/projects.html
+++ b/projects.html
@@ -43,19 +43,43 @@
           <dt>Any Fool Can Buy a Dot Org</dt>
           <dd>- I made this project to show my teachers why ".org" sites are no more
             trust-wrorthy than an other site. Excluding ".gov" and ".edu" obviously</dd>
-          <dd>- <a href="https://github.com/Dovahkid/dovahkid.github.io" target="_blank" class="linkClass">Check out the repo here</a></dd>
+          <dd>- <a href="https://github.com/Dovahkid/anyfoolcanbuyadotorg" target="_blank" class="linkClass">Check out the repo here</a></dd>
           <dd>- <a href="http://AnyFoolCanBuyADotOrg.org" target="_blank" class="linkClass">or go to the site here</a></dd>
         </div>
       </dl>
 
       <dl>
         <div>
-          <dt>1024Chan</dt>
-          <dd>- Me and my friend started this project as a joke that we took too far.</dd>
-          <dd>- <a href="https://github.com/Dovahkid/1024chan" target="_blank" class="linkClass">Check out the repo here</a></dd>
-          <dd>- <a href="http://1024chan.net" target="_blank" class="linkClass">or go to the site here</a></dd>
+          <dt>Drawing-JS</dt>
+          <dd>- A simple drawing website made with paper.js</dd>
+          <dd>- <a href="https://github.com/Dovahkid/drawing-js" target="_blank" class="linkClass">Check out the repo here</a></dd>
+          <dd>- <a href="https://michaelgain.net/drawing-js" target="_blank" class="linkClass">or go to the site here</a></dd>
         </div>
       </dl>
+
+      <dl>
+        <div>
+          <dt>To-do-list</dt>
+          <dd>A simple todo list using vanilla JS</dd>
+          <dd>- <a href="https://github.com/dovahkid/to-do-list" target="_blank" class="linkClass">Check out the repo here</a></dd>
+          <dd>- <a href="https://michaelgain.net/to-do-list" target="_blank" class="linkClass">or go to the site here</a></dd>
+          <dd></dd>
+        </div>
+      </dl>
+
+      <!--
+
+      <dl>
+        <div>
+          <dt>To-do-list</dt>
+          <dd>A simple todo list using vanilla JS</dd>
+          <dd>- <a href="https://github.com/dovahkid/" target="_blank" class="linkClass">Check out the repo here</a></dd>
+          <dd>- <a href="https://michaelgain.net/" target="_blank" class="linkClass">or go to the site here</a></dd>
+          <dd></dd>
+        </div>
+      </dl>
+
+    -->
 
       <h2>App Programming</h2>
       <dl>
