--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       <p class="paraText">If I'm not programming I'm probably playing video games.
         My favorite game is Skyrim. It has been the biggest inspiration for my
         career choice, video game developer. I want to open my own video game studio
-        and produce the type of games I love; Story rich, open-world, character
-        creation/customization, Role Playing Games.</p>
+        and produce the type of games I love; story rich, open-world, character
+        creation/customization, role playing games.</p>
     </div>
 
   </main>
