updated info about  myself

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div id="mainContent">
       <h2>Hi, I'm Michael</h2>
-      <p class="paraText">My name is Michael and I am 17 years old. I am in the 11th grade
+      <p class="paraText">My name is Michael and I am 18 years old. I am in the 12th grade
       at an Early College Highschool. I am currently working towards and Applied
       Associates in Computer Programming and plan to go to a 4 year college to
       get atleast a Bachelors in Computer Science, but I eventually want to
@@ -45,7 +45,8 @@
       <img src="media/code.jpg" class="imgContainer" alt="code">
       <p class="paraText">I love programming and everything computers. I have done
         a lot of programming in languages such as C++, C#, Python, JavaScript,
-        and Visual Basic. I also do HTML and CSS.</p>
+        and Visual Basic. I also do HTML and CSS. C# has quickly become my favorite
+        language to program in because of its flexibility and how powerful it can be.</p>
 
       <br style="clear:both;">
 
