--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
           <dd>- I made this project to show my teachers why ".org" sites are no more
             trust-wrorthy than an other site. Excluding ".gov" and ".edu" obviously</dd>
           <dd>- <a href="https://github.com/Dovahkid/anyfoolcanbuyadotorg" target="_blank" class="linkClass">Check out the repo here</a></dd>
-          <dd>- <a href="http://AnyFoolCanBuyADotOrg.org" target="_blank" class="linkClass">or go to the site here</a></dd>
+          <dd>- <a href="http://AnyFoolCanBuyA.org" target="_blank" class="linkClass">or go to the site here</a></dd>
         </div>
       </dl>
 
