--- a/index.html
+++ b/index.html
@@ -1,33 +1,69 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Michael Gain.net</title>
 
-    <link rel="stylesheet" href="stylesheets/style.css">
+  <meta charset="UTF-8">
+  <meta name="keywords" content="Michael Gain,Michael J Gain,Michael J. Gain,portfolio,index,home">
+  <meta name="author" content="Michael Gain">
+  <meta name="description" content="">
+
+  <link rel="stylesheet" href="stylesheets/stylesheet.css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway|ZCOOL+QingKe+HuangYou" rel="stylesheet">
+  <script src="scripts/scripts.js"></script>
+  <title>Michael Gain</title>
 
 </head>
 <body>
+  <header>
 
+    <div class="floatLeft">
+      <p id="headerLogo"><a href="index.html">{ Michael Gain }</a></p>
+    </div>
+
+    <div class="floatRight">
+      <nav id="mainNav">
+        <ul>
+          <li><span><a href="index.html" id="test">Home</a></span></li>
+          <li><span><a href="projects.html">My Projects</a></span></li>
+          <li><span><a href="about.html">About Me</a></span></li>
+        </ul>
+      </nav>
+    </div>
+
+  </header>
   <main>
 
-    <div id="Output"> <!-- div for output/menu -->
+    <div id="mainContent">
+      <h2>Hi, I'm Michael</h2>
+      <p class="paraText">My name is Michael and I am 18 years old. I am in the 12th grade
+      at an Early College Highschool. I am currently working towards and Applied
+      Associates in Computer Programming and plan to go to a 4 year college to
+      get atleast a Bachelors in Computer Science, but I eventually want to
+      get a PhD.</p>
 
-      <p id="intro">Portfolio Terminal [Version 1]
-2020 Michael Gain</p>
-      <p>Use the 'help' command to see available actions or click <a href="noncmd.html">here</a> for a quick portfolio. </p>
+      <h2>Interests</h2>
+      <img src="media/code.jpg" class="imgContainer" alt="code">
+      <p class="paraText">I love programming and everything computers. I have done
+        a lot of programming in languages such as C++, C#, Python, JavaScript,
+        and Visual Basic. I also do HTML and CSS. C# has quickly become my favorite
+        language to program in because of its flexibility and how powerful it can be.</p>
 
+      <br style="clear:both;">
+
+      <img src="media/gaming.jpg" class="imgContainer2" alt="keyboard">
+      <p class="paraText">If I'm not programming I'm probably playing video games.
+        My favorite game is Skyrim. It has been the biggest inspiration for my
+        career choice, video game developer. I want to open my own video game studio
+        and produce the type of games I love; story rich, open-world, character
+        creation/customization, role playing games.</p>
     </div>
-
-    <div id="Input"> <!-- div for input -->
-
-      <span id="SpanInput">C:\Users\MichaelG></span>
-      <input type="text" id="inputTextBox" onkeypress="enterCommand(event)"></input>
-    </div>
-
 
   </main>
-
-  <script src="scripts/main.js"></script>
-
+<footer id="shortFooter">
+  <p id="footerLeft">Michael G. &copy; 2019</p>
+  <div id="footerRight">
+    <a href="index.html">Home</a> <p>|</p> <a href="projects.html">My Projects</a> <p>|</p> <a href="about.html">About Me</a>
+  </div>
+</footer>
 </body>
 </html>
