--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         <ul>
           <li><span><a href="index.html" id="test">Home</a></span></li>
           <li><span><a href="projects.html">My Projects</a></span></li>
-          <li><span><a href="about.html">About Me</a></span></li>
         </ul>
       </nav>
     </div>
@@ -34,32 +33,66 @@
   <main>
 
     <div id="mainContent">
-      <h2>Hi, I'm Michael</h2>
-      <p class="paraText">My name is Michael and I am 18 years old. I am in the 12th grade
-      at an Early College Highschool. I am currently working towards and Applied
-      Associates in Computer Programming and plan to go to a 4 year college to
-      get atleast a Bachelors in Computer Science, but I eventually want to
-      get a PhD.</p>
+      <h2>A little about me</h2>
+      <p class="paraText">My name is Michael and I am 18. I am currently attending Cabarrus Tech Early College and Rowan-Cabarrus Community College. I will get my high school diploma as well as an Applied Associates of Computer Programming.</p>
 
       <h2>Interests</h2>
       <img src="media/code.jpg" class="imgContainer" alt="code">
       <p class="paraText">I love programming and everything computers. I have done
         a lot of programming in languages such as C++, C#, Python, JavaScript,
-        and Visual Basic. I also do HTML and CSS. C# has quickly become my favorite
-        language to program in because of its flexibility and how powerful it can be.</p>
+        and Visual Basic. I also do a little HTML and CSS. C# has quickly become my favorite
+        language to use because of its flexibility and versatility.</p>
 
       <br style="clear:both;">
 
       <img src="media/gaming.jpg" class="imgContainer2" alt="keyboard">
       <p class="paraText">If I'm not programming I'm probably playing video games.
-        My favorite game is Skyrim. It has been the biggest inspiration for my
-        career choice, video game developer. I want to open my own video game studio
-        and produce the type of games I love; story rich, open-world, character
-        creation/customization, role playing games.</p>
+        My favorite game is Skyrim and it is my biggest inspiration for wanting to develop video games as a career. My interest in programming goes back a few years before with Minecraft. Seeing all the amazing mods that people could create inspired me to learn how to program.</p>
+    </div>
+
+    <div class="experiencesContainer">
+      <h1>Experiences</h1>
+      <p>Most of my recent completed projects are listed on my
+        <a href="projects.html" class="linkClass">projects page</a>.</p>
+
+      <p>Other notable projects have been hosting a website using
+      <a href="http://www.wampserver.com/en/" class="linkClass">WAMP server</a>,
+    hosting game servers, and processes associated with both such as
+    port forwarding.</p>
+
+    <h1>Education</h1>
+    <p>I am currently enrolled in Cabarrus Early College of
+      Technology and Rowan-Cabarrus Community College. I am working towards
+    an Applied Associates of Computer Programming.</p>
+
+    <h2>Certificates</h2>
+    <p>I recently recieved 3 Microsoft Technology Associate(MTA) certificates:</p>
+    <ul id="certList">
+      <li>MTA for Software Development Fundamentals (C#)</li>
+      <li>MTA for Introduction to Programming Using Javascript</li>
+      <li>MTA for Introduction to Programming using Python</li>
+    </ul>
+
+    </div>
+
+    <div class="contactContainer">
+      <h1>Contact Me</h1>
+        <table>
+          <tr>
+            <td><a href="mailto:gain.michaelj01@gmail.com"
+              target="_blank"><img src="media/gmail-logo.png" alt="gmail logo"></a></td>
+          </tr>
+          <tr>
+            <td><a href="https://www.linkedin.com/in/michael-gain-36212b184/"
+              class="linkClass" target="_blank">
+              <img src="media/LinkedIn-logo.png" alt="linkedin logo"></a></td>
+          </tr>
+        </table>
+
     </div>
 
   </main>
-<footer id="shortFooter">
+<footer>
   <p id="footerLeft">Michael G. &copy; 2019</p>
   <div id="footerRight">
     <a href="index.html">Home</a> <p>|</p> <a href="projects.html">My Projects</a> <p>|</p> <a href="about.html">About Me</a>
