--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
   </header>
   <main>
 
-    <h1>Check out my other projects</h1>
+    <h1>Check out my projects</h1>
 
     <div>
       <h2>App Programming</h2>
@@ -59,7 +59,22 @@
           <dd>- A simple program that generates either a single digit from the Fibonacci sequence or up to <i>n</i> in the sequence</dd>
           <dd>- <a href="https://github.com/Dovahkid/CS-Fibonacci" target="_blank" class="linkClass">Check out the repo here</a></dd>
         </div>
+      </dl>
 
+      <dl>
+        <div>
+          <dt>Modular File Encryption</dt>
+          <dd>- A file encryption program that has an API for adding new types of encryption. Uses reflection to read in encryption methods at runtime.</dd>
+          <dd>- <a href="https://github.com/Dovahkid/Modular-File-Encryption" target="_blank" class="linkClass">Check out the repo here</a></dd>
+        </div>
+      </dl>
+
+      <dl>
+        <div>
+          <dt>Nether Additions (A Minecraft mod)</dt>
+          <dd>- A mod that adds new items and blocks to minecraft to expand on the nether dimension. Created using Fabric Modloader.</dd>
+          <dd>- <a href="https://github.com/Dovahkid/Nether-Additions" target="_blank" class="linkClass">Check out the repo here</a></dd>
+        </div>
       </dl>
       
       <h2>Web Development</h2>
