--- a/projects.html
+++ b/projects.html
@@ -71,9 +71,9 @@
 
       <dl>
         <div>
-          <dt>Nether Additions (A Minecraft mod)</dt>
-          <dd>- A mod that adds new items and blocks to minecraft to expand on the nether dimension. Created using Fabric Modloader.</dd>
-          <dd>- <a href="https://github.com/Dovahkid/Nether-Additions" target="_blank" class="linkClass">Check out the repo here</a></dd>
+          <dt>Vanilla Additions (A Minecraft mod)</dt>
+          <dd>- A mod that adds new items and blocks to minecraft to expand the game but still keeps the feel of vanilla. Created using Fabric Modloader.</dd>
+          <dd>- <a href="https://github.com/Dovahkid/VanillaAdditions" target="_blank" class="linkClass">Check out the repo here</a></dd>
         </div>
       </dl>
       
