--- a/projects.html
+++ b/projects.html
@@ -83,7 +83,7 @@
         <div>
           <dt>Any Fool Can Buy a Dot Org</dt>
           <dd>- I made this project to show my teachers why ".org" sites are no more
-            trust-wrorthy than an other site. Excluding ".gov" and ".edu" obviously</dd>
+            trust-worthy than any other site. Excluding ".gov" and ".edu" obviously.</dd>
           <dd>- <a href="https://github.com/Dovahkid/anyfoolcanbuyadotorg" target="_blank" class="linkClass">Check out the repo here</a></dd>
           <dd>- <a href="http://AnyFoolCanBuyA.org" target="_blank" class="linkClass">or go to the site here</a></dd>
         </div>
