--- a/index.html
+++ b/index.html
@@ -1,102 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-
-  <meta charset="UTF-8">
-  <meta name="keywords" content="Michael Gain,Michael J Gain,Michael J. Gain,portfolio,index,home">
-  <meta name="author" content="Michael Gain">
-  <meta name="description" content="">
-
-  <link rel="stylesheet" href="stylesheets/stylesheet.css">
-  <link href="https://fonts.googleapis.com/css?family=Raleway|ZCOOL+QingKe+HuangYou" rel="stylesheet">
-  <script src="scripts/scripts.js"></script>
-  <title>Michael Gain</title>
-
+  <meta charset="utf-8">
+  <title>Portfoliosite</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <header>
-
-    <div class="floatLeft">
-      <p id="headerLogo"><a href="index.html">{ Michael Gain }</a></p>
-    </div>
-
-    <div class="floatRight">
-      <nav id="mainNav">
-        <ul>
-          <li><span><a href="index.html" id="test">Home</a></span></li>
-          <li><span><a href="projects.html">My Projects</a></span></li>
-        </ul>
-      </nav>
-    </div>
-
-  </header>
-  <main>
-
-    <div id="mainContent">
-      <h2>A little about me</h2>
-      <p class="paraText">My name is Michael and I am 18. I am currently attending Cabarrus Tech Early College and Rowan-Cabarrus Community College. I will get my high school diploma as well as an Applied Associates of Computer Programming.</p>
-
-      <h2>Interests</h2>
-      <img src="media/code.jpg" class="imgContainer" alt="code">
-      <p class="paraText">I love programming and everything computers. I have done
-        a lot of programming in languages such as C++, C#, Python, JavaScript,
-        and Visual Basic. I also do a little HTML and CSS. C# has quickly become my favorite
-        language to use because of its flexibility and versatility.</p>
-
-      <br style="clear:both;">
-
-      <img src="media/gaming.jpg" class="imgContainer2" alt="keyboard">
-      <p class="paraText">If I'm not programming I'm probably playing video games.
-        My favorite game is Skyrim and it is my biggest inspiration for wanting to develop video games as a career. My interest in programming goes back a few years before with Minecraft. Seeing all the amazing mods that people could create inspired me to learn how to program.</p>
-    </div>
-
-    <div class="experiencesContainer">
-      <h1>Experiences</h1>
-      <p>Most of my recent completed projects are listed on my
-        <a href="projects.html" class="linkClass">projects page</a>.</p>
-
-      <p>Other notable projects have been hosting a website using
-      <a href="http://www.wampserver.com/en/" class="linkClass">WAMP server</a>,
-    hosting game servers, and processes associated with both such as
-    port forwarding.</p>
-
-    <h1>Education</h1>
-    <p>I am currently enrolled in Cabarrus Early College of
-      Technology and Rowan-Cabarrus Community College. I am working towards
-    an Applied Associates of Computer Programming.</p>
-
-    <h2>Certificates</h2>
-    <p>I recently recieved 3 Microsoft Technology Associate(MTA) certificates:</p>
-    <ul id="certList">
-      <li>MTA for Software Development Fundamentals (C#)</li>
-      <li>MTA for Introduction to Programming Using Javascript</li>
-      <li>MTA for Introduction to Programming using Python</li>
-    </ul>
-
-    </div>
-
-    <div class="contactContainer">
-      <h1>Contact Me</h1>
-        <table>
-          <tr>
-            <td><a href="mailto:gain.michaelj01@gmail.com"
-              target="_blank"><img src="media/gmail-logo.png" alt="gmail logo"></a></td>
-          </tr>
-          <tr>
-            <td><a href="https://www.linkedin.com/in/michael-gain-36212b184/"
-              class="linkClass" target="_blank">
-              <img src="media/LinkedIn-logo.png" alt="linkedin logo"></a></td>
-          </tr>
-        </table>
-
-    </div>
-
-  </main>
-<footer>
-  <p id="footerLeft">Michael G. &copy; 2019</p>
-  <div id="footerRight">
-    <a href="index.html">Home</a> <p>|</p> <a href="projects.html">My Projects</a> <p>|</p> <a href="about.html">About Me</a>
-  </div>
-</footer>
-</body>
+  <app-root></app-root>
+<script src="runtime.js" defer></script><script src="polyfills.js" defer></script><script src="styles.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
 </html>
