--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navBarSupportedContent">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a href="#" class="navbar-brand">Michael Gain</a>
+      <a href="index.html" class="navbar-brand">Michael Gain</a>
 
     <div class="collapse navbar-collapse" id="navBarSupportedContent">
       <ul class="navbar-nav ml-auto">
@@ -38,8 +38,8 @@
       <div class="container">
 
         <div class="jumbotron">
-          <h1 class="display-4">About Me</h1>
-          <p class="lead"></p>
+          <h1 class="display-4 d-none d-md-block d-lg-block">About Me</h1>
+          <h3 class="d-sm-block d-md-none">About Me</h3>
           <hr class="my-4">
           <p>My name is Michael Gain. I currently attend Cabarrus Early College of Technology and Rowan-Cabarrus Community College. 
             I will receive my High School Diploma as well as an Applied Associates of Computer Programming.</p>
@@ -56,8 +56,10 @@
         </div>
 
         <div class="jumbotron">
-          <h1 class="display-4">Education and Experience</h1>
-          <p class="lead"></p>
+          <a class="float-left d-none d-sm-none d-md-block" href="https://www.flaticon.com/authors/linector" title="Linector" target="_blank"><img src="src/assets/education.svg" alt="picture of globe with grad hat" class="education-img"></a>
+          
+          <h1 class="display-4 d-none d-md-block d-lg-block">Education and Experience</h1>
+          <h3 class="d-sm-block d-md-none">Education and Experience</h3>
           <hr class="my-4">
           <p>I am currently enrolled in Cabarrus Early College of Technology and Rowan-Cabarrus Community College. I am working towards an Applied Associates of Computer Programming.</p>
           <p>Most of my recent projects are listed on my <a href="projects.html" >Projects page</a>. Other notable projects have been hosting a website using WAMP server, hosting game 
