--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navBarSupportedContent">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a href="#" class="navbar-brand">Michael Gain</a>
+        <a href="index.html" class="navbar-brand">Michael Gain</a>
 
       <div class="collapse navbar-collapse" id="navBarSupportedContent">
         <ul class="navbar-nav ml-auto">
