deno vite lit setup

--- a/index.html
+++ b/index.html
@@ -1,28 +1,14 @@
 <!doctype html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <meta name="Description" content="Put your description here.">
-  <base href="/">
-
-  <style>
-    html,
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: sans-serif;
-      background-color: #ededed;
-    }
-  </style>
-  <title>trusty-app</title>
-</head>
-
-<body>
-  <trusty-app></trusty-app>
-
-  <script type="module" src="./out-tsc/src/trusty-app.js"></script>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Michael Gain</title>
+	
+    <script type="module" src="/src/main-comp.ts"></script>
+  </head>
+  <body>
+    <main-comp></main-comp>
+  </body>
 </html>
