--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Michael Gain</title>
+  
+		<link rel="stylesheet" href="./src/index.css">
+
+		<title>Michael Gain</title>
 	
     <script type="module" src="/src/main-comp.ts"></script>
   </head>
